src/test/resources/regression/verification/overflow/invalid/Overflow9.scala
import leon.lang._

object Overflow9 {

  def foo9(x: Int): Int = {
    x*4
  }

}
